--- a/src/Pages/Home/Banner/Banner.css
+++ b/src/Pages/Home/Banner/Banner.css
@@ -1,10 +1,28 @@
 .videoTag {
   opacity: 1;
-  z-index: -1;
   filter: brightness(40%);
+  height: 100vh;
 }
 .textContainer {
-  position: absolute;
-  bottom: 50px;
   left: 0;
+}
+/* .timer {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+} */
+.clock {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+}
+.clock section {
+  text-align: center;
+  /* font-size: 2rem; */
+  margin-left: 10px;
+  font-weight: bolder;
+  background-color: rgba(128, 128, 128, 0.219);
+  /* width: 100px; */
+  border-radius: 5px;
 }
